Modals no longer cut off at bottom of page

--- a/public/css/controlpanel.css
+++ b/public/css/controlpanel.css
@@ -195,6 +195,7 @@ table.block th {
     border: 1px solid #888;
     width: fit-content;
     text-align: center;
+    margin-bottom: 150px;
 }
 
 .camper-modal-input, .user-modal-input, .form-control{
